--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <title>Barcode Scanner</title>
     <script src="jquery.min.js"></script>
-    <script src="instascan.min.js"></script>
+    <script src="main.js"></script>
     <link href="qr.css" rel="stylesheet">
 </head>
 
