--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
         <h1 class="display-3">BARCODE SCANNER</h1>
-        <p class="display-2">Arahkan QRCode pada vouhcer Anda.</p>
+        <p class="display-2">Arahkan QRCode pada Voucher Anda.</p>
       </div>
     </div>
   </div>
