--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>Barcode Scanner</title>
     <script src="jquery.min.js"></script>
     <script src="instascan.min.js"></script>
     <link href="qr.css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <meta property="og:url" content="https://baleanet.github.io/barcode" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Hotspot Barcode Scanner" />
+    <meta property="og:description" content="Login otomatis dengan barcode scanner untuk voucher hotspot" />
+    <meta property="og:image" content="/scanning-qr-code.jpg" />
 </head>
 
 <body>
