--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Barcode Scanner</title>
+    <title>Barcode Scanner Voucher</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <meta name="Description" content="Login otomatis dengan barcode scanner untuk voucher hotspot, mikhmon, mikbotam, userman.">
     <meta property="og:url" content="https://baleanet.github.io/barcode" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Hotspot Barcode Scanner" />
