--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Hotspot Barcode Scanner" />
     <meta property="og:description" content="Login otomatis dengan barcode scanner untuk voucher hotspot" />
-    <meta property="og:image" content="/scanning-qr-code.jpg" />
+    <meta property="og:image" content="scanning-qr-code.jpg" />
     <link href="qr.css" rel="stylesheet">
     <script src="jquery.min.js"></script>
     <script src="instascan.min.js"></script>
