--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1>BARCODE SCANNER</h1>
-        <h5>Arahkan QRCode pada Voucher Anda.</h5>
+        <h1 class="display-3">BARCODE SCANNER</h1>
+        <p class="display-2">Arahkan QRCode pada Voucher Anda.</p>
       </div>
     </div>
   </div>
